--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.0
+  provider: 6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  graphql_flutter: ^5.0.0
-  http: ^0.13.3
-  flutter_bloc: ^7.3.0
-  bloc: ^7.2.0
-  equatable: ^1.1.1
+  cupertino_icons: 1.0.2
+  graphql_flutter: 5.0.0
+  http: 0.13.3
+  flutter_bloc: 7.3.0
+  equatable: 1.1.1
 
 
 dev_dependencies:
