--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   http: 0.13.3
   flutter_bloc: 7.3.0
   equatable: 1.1.1
+  firebase_core: "^0.7.0"
+  firebase_messaging: "^8.0.0-dev.15"
+  flutter_local_notifications: any
 
 
 dev_dependencies:
