--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   http: 0.13.3
   flutter_bloc: 7.3.0
   equatable: 1.1.1
-  firebase_core: "^0.7.0"
-  firebase_messaging: "^8.0.0-dev.15"
-  flutter_local_notifications: any
+  firebase_core: 1.7.0
+  firebase_messaging: 10.0.8
+  flutter_local_notifications: 9.0.0
 
 
 dev_dependencies:
