--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_core: 1.7.0
   firebase_messaging: 10.0.8
   flutter_local_notifications: 9.0.0
-
+  firebase_analytics: "^7.0.1"
 
 dev_dependencies:
   flutter_test:
