--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_messaging: 10.0.5
   flutter_local_notifications: 9.0.0
   firebase_analytics: 8.3.3
+  json_serializable: 6.0.0
 
 dev_dependencies:
   flutter_test:
