--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_local_notifications: 9.0.0
   firebase_analytics: 8.3.3
   json_annotation: ^4.1.0
+  shared_preferences: 2.0.8
+  font_awesome_flutter: 9.1.0
+  get_it: 7.2.0
+  hive: 2.0.4
+  hive_flutter: 1.1.0
 
 dev_dependencies:
   flutter_test:
