--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.12.1
-  hive_generator: ^1.0.0
+  build_runner: 2.1.4
+  hive_generator: 1.1.1
 
 
 # For information on the generic Dart part of this file, see the
