--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: 9.1.0
   hive: 2.0.4
   hive_flutter: 1.1.0
+  carousel_slider: 4.0.0
 
 dev_dependencies:
   flutter_test:
