--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   graphql_flutter: 5.0.0
   http: 0.13.3
   flutter_bloc: 7.3.0
-  equatable: 1.1.1
+  equatable: 2.0.2
   firebase_core: 1.7.0
   firebase_messaging: 10.0.5
   flutter_local_notifications: 9.0.0
@@ -47,6 +47,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: 2.1.4
   hive_generator: 1.1.1
+  mockito: 5.0.16
+  bloc_test: 8.4.0
 
 
 # For information on the generic Dart part of this file, see the
